--- a/Css/styles.css
+++ b/Css/styles.css
@@ -20,3 +20,16 @@ body {
     height: 100%;
     width: 100%;
 }
+
+.section-center {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    z-index: 6;
+    text-align: center;
+    transform: translateY(-50%);
+}
