--- a/Css/styles.css
+++ b/Css/styles.css
@@ -52,3 +52,77 @@ h1 {
     position:absolute;
     left: -9999px;
 }
+
+.menu-icon:checked + label,
+.menu-icon:not(checked) + label {
+    position: fixed;
+    top: 63px;
+    right: 75px;
+    display: block;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.menu-icon:checked + label:before,
+.menu-icon:not(checked) + label:before {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 30px;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    border-top: 2px solid #ececec;
+    border-bottom: 2px solid #ececec;
+    transition: border-width 100ms 1500ms ease, 
+              top 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
+              height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1), 
+              background-color 200ms ease,
+              transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.menu-icon:checked + label:after,
+.menu-icon:not(checked) + label:after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 22px;
+    height: 2px;
+    z-index: 20;
+    top: 10px;
+    right: 4px;
+    background-color: #ececec;
+    margin-top: -1;
+    transition: width 100ms 1750ms ease, 
+                right 100ms 1750ms ease,
+                margin-top 100ms ease, 
+                transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.menu-icon:checked + label:before {
+    top:  10px;
+    transform: rotate(45deg);
+    height: 2px;
+    background-color: #ececec;
+    border-width: 0;
+    transition: border-width 100ms 340ms ease, 
+              top 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+              height 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1), 
+              background-color 200ms 500ms ease,
+              transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.menu-icon:checked + label:after {
+    width: 30px;
+    margin-top: 0;
+    right: 0;
+    transform: rotate(-45deg);
+    transition: width 100ms ease,
+                right 100ms ease,  
+                margin-top 100ms 500ms ease, 
+                transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
+}
