--- a/Css/styles.css
+++ b/Css/styles.css
@@ -206,3 +206,19 @@ h1 {
 .nav ul li a:hover:after {
     width: 100%;
 }
+
+.menu-icon:checked ~ .nav ul li:nth-child(1) {
+    transition-delay: 1400ms;
+}
+
+.menu-icon:checked ~ .nav ul li:nth-child(2) {
+    transition-delay: 1480ms;
+}
+
+.menu-icon:checked ~ .nav ul li:nth-child(3) {
+    transition-delay: 1560ms;
+}
+
+.menu-icon:checked ~ .nav ul li:nth-child(4) {
+    transition-delay: 1640ms;
+}
