--- a/Css/styles.css
+++ b/Css/styles.css
@@ -17,7 +17,7 @@ body {
     background-position: center;
     background-repeat: repeat;
     background-size: 4%;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -48,13 +48,14 @@ h1 {
     color: transparent;
 }
 
-[type="chekbox"]:checked,[type="chekbox"]:not(:checked) {
+[type="chekbox"]:checked,
+[type="chekbox"]:not(:checked) {
     position:absolute;
     left: -9999px;
 }
 
 .menu-icon:checked + label,
-.menu-icon:not(checked) + label {
+.menu-icon:not(:checked) + label {
     position: fixed;
     top: 63px;
     right: 75px;
@@ -68,7 +69,7 @@ h1 {
 }
 
 .menu-icon:checked + label:before,
-.menu-icon:not(checked) + label:before {
+.menu-icon:not(:checked) + label:before {
     position: absolute;
     content: '';
     display: block;
@@ -86,7 +87,7 @@ h1 {
 }
 
 .menu-icon:checked + label:after,
-.menu-icon:not(checked) + label:after {
+.menu-icon:not(:checked) + label:after {
     position: absolute;
     content: "";
     display: block;
@@ -126,6 +127,8 @@ h1 {
                 margin-top 100ms 500ms ease, 
                 transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
+
+
 
 .nav ul {
     position: absolute;
@@ -221,4 +224,27 @@ h1 {
 
 .menu-icon:checked ~ .nav ul li:nth-child(4) {
     transition-delay: 1640ms;
+}
+
+@media screen and (max-width: 991) {
+    .menu-icon:checked + label,
+    .menu-icon:not(checked) + label {
+        right: 55px;
+    }
+
+    .nav {
+        right: 30px;
+    }
+
+    h1 {
+        font-size: 9vw;
+        -webkit-text-stroke: 2px transparent;
+        text-stroke:2px transparent;
+        text-fill-color: #ffeba7;
+        color: #ffeba7;
+    }
+
+    .nav ul li a {
+        font-size: 8vh;
+    }
 }
