--- a/Css/styles.css
+++ b/Css/styles.css
@@ -74,6 +74,7 @@ h1 {
     content: '';
     display: block;
     width: 30px;
+    height: 20px;
     z-index: 20;
     top: 0;
     left: 0;
@@ -149,6 +150,30 @@ h1 {
                 height 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
+@keyframes border-transform{
+    0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
+  14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
+  28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
+  42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
+  56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
+  70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
+  84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+}
+
+.menu-icon:checked ~ .nav {
+    animation-play-state: paused;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    width: 200%;
+    height: 200%;
+    transition: top 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),  
+                right 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),
+                transform 250ms 700ms ease,
+                width 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1),
+                height 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
 .nav ul {
     position: absolute;
     top: 50%;
@@ -172,8 +197,8 @@ h1 {
     text-align: center;
     list-style: none;
     pointer-events: none;
-    /* opacity: 0; */
-    /* visibility: hidden; */
+    opacity: 0; 
+    visibility: hidden; 
     transform: translateY(30px);
     transition: all 250ms linear;
 }
